--- a/index.html
+++ b/index.html
@@ -20,12 +20,16 @@
     </header>
 
     <main>
-        <nav id="category-nav">
-            <h2>Danh mục sản phẩm</h2>
-        </nav>
+    <nav id="category-nav">
+        <h2>Danh mục sản phẩm</h2>
+    </nav>
+    <section id="product-list">
+    </section>
+    </main>
 
-        <section id="product-list">
-        </section>
+    <div id="pagination-controls"></div>
+
+    <script src="script.js"></script>
     </main>
 
     <script src="script.js"></script>
@@ -34,11 +38,11 @@
         <div class="footer-container">
             <div class="footer-column info">
                 <a href="/" class="logo">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#333333"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M12.94 8.12L12.23 7H9.77L9.06 8.12C8.62 8.8 8 9.95 8 11.23v1.54c0 .54.44.99 1 .99h6c.56 0 1-.45 1-.99v-1.54c0-1.28-.62-2.43-1.06-3.11zM11 11H9v-1h2v1zm4 0h-2v-1h2v1z" opacity=".3"/><path d="M21.41 11.41l-8.83-8.83c-.37-.37-.88-.58-1.41-.58H4c-1.1 0-2 .9-2 2v7.17c0 .53.21 1.04.59 1.41l8.83 8.83c.78.78 2.05.78 2.83 0l7.17-7.17c.78-.78.78-2.05 0-2.83zM13 21.99l-8.41-8.41V4h7.17l8.41 8.41-7.17 7.58z"/><path d="M6.5 6.5m-1.5 0a1.5 1.5 0 1 0 3 0 1.5 1.5 0 1 0 -3 0z"/><path d="M11 10H9v1h2v-1zm4 0h-2v1h2v-1zm-1.23-3H9.77l-.71 1.12C8.62 8.8 8 9.95 8 11.23v1.54c0 .54.44.99 1 .99h6c.56 0 1-.45 1-.99v-1.54c0-1.28-.62-2.43-1.06-3.11L13.23 7zM15 12h-2v-1h2v1z"/></svg>
+                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#333333"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M12.94 8.12L12.23 7H9.77L9.06 8.12C8.62 8.8 8 9.95 8 11.23v1.54c0 .54.44.99 1 .99h6c.56 0 1-.45 1-.99v-1.54c0-1.28-.62-2.43-1.06-3.11zM11 11H9v-1h2v1zm4 0h-2v-1h2v1z" opacity=".3"/><path d="M21.41 11.41l-8.83-8.83c-.37-.37-.88-.58-1.41-.58H4c-1.1 0-2 .9-2 2v7.17c0 .53.21 1.04.59 1.41l8.83 8.83c.78.78 2.05.78 2.83 0l7.17-7.17c.78-.78.78-2.05 0-2.83zM13 21.99l-8.41-8.41V4h7.17l8.41 8.41-7.17 7.58z"/><path d="M6.5 6.5m-1.5 0a1.5 1.5 0 1 0 3 0 1.5 1.5 0 1 0 -3 0z"/><path d="M11 10H9v1h2v-1zm4 0h-2v1h2v-1zm-1.23-3H9.77l-.71 1.12C8.62 8.8 8 9.95 8 11.23v1.54c0 .54.44.99 1 .99h6c.56 0 1-.45 1-.99v-1.54c0-1.28-.62-2.43-1.06-3.11L13.23 7zM15 12h-2v-1h2v1z"/></svg>
                     So Sánh Giá
                 </a>
                 <p>
-                    <b>Trụ sở chính:</b> Km10 đường Nguyễn Trãi, Hà Đông, Hà Nội
+                    <b>Trụ sở chính:</b> 120 Phố Yên Lãng Thịnh Quang, Đống Đa, Hà Nội 
                 </p>
                 <p>
                     <b>Email:</b> contact@sosanhgia.vn
